@@ -2,10 +2,19 @@ Encoding: UTF-8
 Package: HDclassif
 Type: Package
 Title: High Dimensional Supervised Classification and Clustering
-Version: 2.2.1
+Version: 2.2.2
 Depends: grDevices, utils, graphics, stats, MASS
 Imports: rARPACK
-Author: Laurent Berge, Charles Bouveyron and Stephane Girard
+Authors@R: c(person(given = "Laurent",
+                      family = "Berge",
+                      role = c("aut", "cre"),
+                      email = "laurent.berge@u-bordeaux.fr"),
+               person(given = "Charles",
+                      family = "Bouveyron",
+                      role = "aut"),
+               person(given = "Stephane",
+                      family = "Girard",
+                      role = "aut"))
 Maintainer: Laurent Berge <laurent.berge@u-bordeaux.fr>
 Description: Discriminant analysis and data clustering methods for high
     dimensional data, based on the assumption that high-dimensional data live in
@@ -17,6 +26,9 @@ LazyLoad: yes
 ZipData: no
 RoxygenNote: 7.2.3
 NeedsCompilation: no
-Packaged: 2023-08-22 14:05:28 UTC; lrberge
+Packaged: 2025-03-20 20:58:29 UTC; lrberge
+Author: Laurent Berge [aut, cre],
+  Charles Bouveyron [aut],
+  Stephane Girard [aut]
 Repository: CRAN
-Date/Publication: 2023-08-23 07:50:02 UTC
+Date/Publication: 2025-03-20 21:40:02 UTC
