@@ -1,15 +1,15 @@
 869b6ac2640e622cf5e7ea21f7ced345 *ChangeLog
-8cd3efbff28959e5e215fb642a7ea2c1 *DESCRIPTION
+6a75e25b728f657144eba61064801368 *DESCRIPTION
 e124174424f972d03e974ae7453068c2 *NAMESPACE
 839b5a7a78edd003e5d8fdb141071344 *R/controls.R
 d85deee70e2036ad61d5807ad06a5c7b *R/demo.R
-88055f22ab51da8ad4e13ad7074811d5 *R/hdc.R
+1aab2295321baac4d9a8bd8d5840b3ef *R/hdc.R
 efacfedec75336a11c886fc90aea77c3 *R/hdda.R
 fc4145db69ceecf75b46cffe163f91bb *R/hddc.R
-9a46e4715d23ff6ea3bea2549d58f941 *R/mdaHD.R
+ad6840a55c0322236f698ae5a13c1c91 *R/mdaHD.R
 b239fecc91471f24c44c5257d93c8ea6 *R/onLoad.R
 f00e30591c09eb07e14e193d44e826b0 *README.md
-cb4924f3573383fca290a0a8e2ca5294 *build/partial.rdb
+b54db8794555342c4feee5fe0b1b8f5b *build/partial.rdb
 c6f12c19faff9c2f80afe55639b3d4a3 *data/Crabs.rda
 ffb2a0e027b07b73f6feb3752c468e7e *data/wine.rda
 3c3e15c7421bd085435d6a0bc4569d31 *demo/00Index
@@ -17,12 +17,12 @@ ffb2a0e027b07b73f6feb3752c468e7e *data/wine.rda
 d6af4b7893f3472548a3691c37dc3379 *demo/hdda.r
 ce8ee72079d08babe1dfc1df117d50fa *demo/hddc.r
 0ab2003adec2c61eb082e47a5cc22dd2 *inst/CITATION
-a24c51116bfbf29d0b6e1b3e47570426 *inst/NEWS.Rd
+4de258a06af44d90c8413f6c1cb3a80f *inst/NEWS.Rd
 24da942a411d639f8210c273aaa1df67 *man/Crabs.Rd
 83673da79a63a7229997573cabc0d580 *man/HDclassif-package.Rd
 1bc3f0aebc9b4b3cf5d73a081e1af762 *man/demo_hddc.Rd
-615d88e025226286fe13ef78ba95be6a *man/hdda.Rd
-5eff5e3da1fab5354bdacc17157c08fa *man/hddc.Rd
+1f7577f1d8920f1b35ec5b04ffb5a7db *man/hdda.Rd
+b1feaebbc7c730bfc79919f02af8b18e *man/hddc.Rd
 ec3c47440f93c064f070cd83520a5217 *man/hdmda.Rd
 d7eb61218c3c40f09e01d1b59a94ab5f *man/plot.hdc.Rd
 9e7af37d33aaf3b1ec841b3cc73de257 *man/predict.hdc.Rd
